; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/atkbdc/extr_atkbdc.c_atkbdc_probe_unit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/atkbdc/extr_atkbdc.c_atkbdc_probe_unit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @atkbdc_probe_unit(i32 %0, %struct.resource* %1, %struct.resource* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.resource*, align 8
  %7 = alloca %struct.resource*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.resource* %1, %struct.resource** %6, align 8
  store %struct.resource* %2, %struct.resource** %7, align 8
  %8 = load %struct.resource*, %struct.resource** %6, align 8
  %9 = call i64 @rman_get_start(%struct.resource* %8)
  %10 = icmp sle i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @ENXIO, align 4
  store i32 %12, i32* %4, align 4
  br label %20

13:                                               ; preds = %3
  %14 = load %struct.resource*, %struct.resource** %7, align 8
  %15 = call i64 @rman_get_start(%struct.resource* %14)
  %16 = icmp sle i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* @ENXIO, align 4
  store i32 %18, i32* %4, align 4
  br label %20

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %19, %17, %11
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i64 @rman_get_start(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
